Add AES-256-GCM encryption to telemetry transmit
Integrated real encryption into transmit_telemetry using the aes-gcm crate.
The function now:

Serializes TelemetryData to JSON.

Encrypts the payload with AES-256-GCM and a random 12-byte nonce.

Base64-encodes the combined nonce + ciphertext for safe network transport.

--- a/iot-apps/Cargo.toml
+++ b/iot-apps/Cargo.toml
@@ -5,3 +5,10 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+log = "0.4"
+aes-gcm = "0.10"          # AES-GCM encryption
+aes = "0.8"               # AES block cipher (required by aes-gcm)
+rand = "0.8"              # Secure random number generation
+base64 = "0.21"           # Encode ciphertext to a string
